2.1.0/_sources/gallery/lines_bars_and_markers/scatter_custom_symbol.rst.txt


.. _sphx_glr_gallery_lines_bars_and_markers_scatter_custom_symbol.py:


=====================
Scatter Custom Symbol
=====================





.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_custom_symbol_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np

    # unit area ellipse
    rx, ry = 3., 1.
    area = rx * ry * np.pi
    theta = np.arange(0, 2 * np.pi + 0.01, 0.1)
    verts = list(zip(rx / area * np.cos(theta), ry / area * np.sin(theta)))

    x, y, s, c = np.random.rand(4, 30)
    s *= 10**2.

    fig, ax = plt.subplots()
    ax.scatter(x, y, s, c, marker=None, verts=verts)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: scatter_custom_symbol.py <scatter_custom_symbol.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: scatter_custom_symbol.ipynb <scatter_custom_symbol.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
